# frame-labeler

./: CMakeLists.txt  FrameLabeler.cpp  README.md
usage_examples/: 01_frame_extraction.sh  02_frame_labeling.sh  03_label_viewing.sh  04_label_fully_negative.sh  about.me
usage_examples/frames/: about.me
